[package]
name = "message_queue_example"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.11"
serde_json = "1.0.146"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
